# codex-agent-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
e2e-tests/: conftest.py  test_basic.py  test_client.py  test_tool_use.py
examples/: basic_query.py  multi_turn.py  poc.py  streaming.py  structured_output.py
src/codex_agent_sdk/: __init__.py  _errors.py  client.py  query.py  types.py
src/codex_agent_sdk/_internal/: client.py  message_parser.py  query.py
src/codex_agent_sdk/_internal/transport/: __init__.py  _base.py  subprocess_cli.py
tests/: conftest.py  test_client.py  test_errors.py  test_integration.py  test_message_parser.py  test_query.py  test_subprocess_buffering.py  test_transport.py  test_types.py
