[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-agent-sdk"
version = "0.1.0"
description = "Python SDK for the OpenAI Codex CLI agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "codex-agent-sdk contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.0.0",
    "typing_extensions>=4.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/caprinux/codex-agent-sdk-python"
Repository = "https://github.com/caprinux/codex-agent-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_agent_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
